# upobf

./: .gitignore  Cargo.toml  README.md
crates/upobf-cli/: Cargo.toml
crates/upobf-cli/src/: main.rs
crates/upobf-core/: Cargo.toml
crates/upobf-core/src/: lib.rs  oep_steal.rs  payload.rs
crates/upobf-core/src/compress/: lzma.rs  mod.rs
crates/upobf-core/src/crypto/: chacha20.rs  mod.rs  prng.rs
crates/upobf-core/src/filter/: bcj_x86.rs  mod.rs
crates/upobf-core/src/obfuscate/: mod.rs  mutate.rs  section_names.rs  string_enc.rs  stub_polymorph.rs
crates/upobf-core/src/policy/: mod.rs  preset.rs
crates/upobf-core/src/stub_link/: coff.rs  mod.rs  relocator.rs
crates/upobf-core/tests/: m2_smoke.rs  m3_stub_link.rs
crates/upobf-elf/: Cargo.toml
crates/upobf-elf/src/: lib.rs  unit_tests.rs
crates/upobf-elf/src/layout/: mod.rs  safe_ranges.rs
crates/upobf-elf/src/parse/: dynamic.rs  eh_frame.rs  headers.rs  mod.rs  notes.rs  reader.rs  relocations.rs  segments.rs  symbols.rs
crates/upobf-elf/tests/: inspect_demo.rs  writer_round_trip.rs
crates/upobf-macho/: Cargo.toml
crates/upobf-macho/src/: lib.rs  pack.rs
crates/upobf-macho/src/layout/: mod.rs  safe_ranges.rs
crates/upobf-macho/src/parse/: chained_fixups.rs  dylib.rs  headers.rs  mod.rs  reader.rs  segments.rs  symbols.rs
crates/upobf-macho/tests/: pack_e2e.rs  parse_macho.rs  writer_macho.rs
crates/upobf-pe/: Cargo.toml
crates/upobf-pe/src/: lib.rs  unit_tests.rs
crates/upobf-pe/src/layout/: classifier.rs  mod.rs  name_polymorph.rs  oep_steal.rs  rich_header.rs  safe_ranges.rs
crates/upobf-pe/src/parse/: data_dir.rs  headers.rs  load_config.rs  mod.rs  pdata.rs  reader.rs  sections.rs  tls.rs
crates/upobf-pe/tests/: inspect_demo.rs
docs/: phase-k-macos-arm64.md  protocol-m4.md
stubs/elf-x64/: build.sh
stubs/elf-x64/include/: api_resolve.h  obfuscate.h  payload.h  stub_runtime.h  watchdog.h
stubs/elf-x64/src/: api_resolve.c  entry.c  watchdog.c
stubs/macho-arm64/: build.sh
stubs/macho-arm64/include/: api_resolve.h  payload.h  stub_runtime.h  watchdog.h
stubs/macho-arm64/src/: api_resolve.c  bcj_arm64.c  chacha20.c  entry.c  lzma_dec.h  watchdog.c
stubs/pe-x64/: build.ps1
stubs/pe-x64/include/: api_resolve.h  payload.h  stub_api.h  stub_runtime.h  watchdog.h
stubs/pe-x64/src/: anti_debug.c  api_resolve.c  bcj_x86.c  chacha20.c  entry.c  lzma_dec.c  lzma_dec.h  oep_redirect.c  watchdog.c
stubs/pe-x64/src/arch/x64/: peb.S  trampoline.S
tests/e2e/: compare_behavior.ps1  pack_run_verify.ps1  pack_run_verify_linux.sh  pack_run_verify_macos.sh
tests/fixtures/PatchInstaller.app/Contents/: Info.plist
tests/fixtures/PatchInstaller.app/Contents/MacOS/: libAvaloniaNative.dylib  libHarfBuzzSharp.dylib  libminiaudio.dylib
tests/fixtures/PatchInstaller.app/Contents/Resources/: AppIcon.icns
tests/fixtures/PatchInstaller.app/Contents/_CodeSignature/: CodeResources
tools/obfuscator-passes/: CMakeLists.txt  build.ps1  build.sh  build_macos.sh
tools/obfuscator-passes/src/: BogusCF.cpp  BogusCF.h  Cff.cpp  Cff.h  InstSub.cpp  InstSub.h  Plugin.cpp
tools/stub-builder/: build.ps1
