[workspace]
resolver = "2"
members = [
    "crates/upobf-core",
    "crates/upobf-pe",
    "crates/upobf-elf",
    "crates/upobf-macho",
    "crates/upobf-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
authors = ["upobf authors"]

[workspace.dependencies]
# Internal
upobf-core  = { path = "crates/upobf-core" }
upobf-pe    = { path = "crates/upobf-pe" }
upobf-elf   = { path = "crates/upobf-elf" }
upobf-macho = { path = "crates/upobf-macho" }

# Errors / logging
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Crypto
chacha20 = "0.9"
sha2 = "0.10"
crc32fast = "1.4"

# Compression
xz2 = "0.1"

# RNG
rand = "0.8"
rand_chacha = "0.3"

# Bytes
byteorder = "1.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
