[package]
name = "upobf-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Command-line interface for upobf packer/obfuscator."

[[bin]]
name = "upobf"
path = "src/main.rs"

[dependencies]
upobf-core.workspace = true
upobf-pe.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
