[package]
name = "upobf-pe"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Windows PE (x64) parsing, layout and packing for upobf."

[dependencies]
upobf-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true }
serde_json.workspace = true
byteorder.workspace = true
